# fcma

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  pyproject.toml-jose  pyproject.toml-main  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
bugs/: debug_fcma.py  fcma_prob_78_30_4_3_8_0.02.pkl
cloudmodel/: util.py
cloudmodel/unified/: model.py  units.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: aws_eu_west_1.py  debug_fcma.py  example1.py  example2.py  example3.py  example4.py  example5.py  example7.py  example_article.py  example_doc.py  fcma_bug_2_1_3_2_0.02.pkl  fcma_bug_2_1_3_8_0.02.pkl  fcma_prob_48_15_1_0.json  ics_article.py
fcma/: __init__.py  fcma.py  helper.py  model.py  serialization.py  visualization.py
fcma/AWS/: aws_eu_west_1.py
perf/: jsonmul.py  perf.py  pkl2json.py
perf/json_data/: fcma_prob_0_1_1_0.json  fcma_prob_10_1_4_0.json  fcma_prob_11_1_4_0.json  fcma_prob_12_1_4_3_2_0.json  fcma_prob_13_1_4_3_2_0.json  fcma_prob_14_1_4_3_8_0.json  fcma_prob_15_1_4_3_8_0.json  fcma_prob_16_2_1_0.json  fcma_prob_17_2_1_0.json  fcma_prob_18_2_1_0.json  fcma_prob_19_2_1_0.json  fcma_prob_1_1_1_0.json  fcma_prob_20_2_1_3_2_0.json  fcma_prob_21_2_1_3_2_0.json  fcma_prob_22_2_1_3_8_0.json  fcma_prob_23_2_1_3_8_0.json  fcma_prob_24_2_4_0.json  fcma_prob_25_2_4_0.json  fcma_prob_26_2_4_0.json  fcma_prob_27_2_4_0.json  fcma_prob_28_2_4_3_2_0.json  fcma_prob_29_2_4_3_2_0.json  fcma_prob_2_1_1_0.json  fcma_prob_30_2_4_3_8_0.json  fcma_prob_31_2_4_3_8_0.json  fcma_prob_32_5_1_0.json  fcma_prob_33_5_1_0.json  fcma_prob_34_5_1_0.json  fcma_prob_35_5_1_0.json  fcma_prob_36_5_1_3_2_0.json  fcma_prob_37_5_1_3_2_0.json  fcma_prob_38_5_1_3_8_0.json  fcma_prob_39_5_1_3_8_0.json  fcma_prob_3_1_1_0.json  fcma_prob_40_5_4_0.json  fcma_prob_41_5_4_0.json  fcma_prob_42_5_4_0.json  fcma_prob_43_5_4_0.json  fcma_prob_44_5_4_3_2_0.json  fcma_prob_45_5_4_3_2_0.json  (+40 more)
perf/new_json_data-1/: fcma_prob_0_1_1_0.json  fcma_prob_1_1_1_0.json  (+23 more)
tests/: __init__.py  conftest.py  example1_expected_allocation.json  example1_expected_allocation_v2.json  examples.py  generate_json_examples.py  generate_json_solution.py  test_bad_problems.py  test_cores_issue.py  test_example1.py  test_example1_velocity2.py  test_example1_with_solution_printer.py  test_examples.py  test_fcma.py  test_parametrized.py  test_serialize.py  test_solution_summary.py  utils_test.py
tmp/: debug_fcma.py
(+313 files in other folders)
