[tool.poetry]
name = "fcma"
version = "1.0.0"
description = "Fast Container to Machine Allocator"
authors = ["Jose Maria Lopez <chechu@uniovi.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cloudmodel = { git = "https://jentrialgo@github.com/jldiaz-uniovi/cloudmodel.git" }
pulp = "^2.8.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"
coverage = "^7.4.3"
pylint = "^3.1.0"
pytest-cov = "^4.1.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: simple test that check that nothing blows up",
]